Topics field and vocabulary name. Part of localgovdrupal/localgov_topics#1

--- a/config/install/field.storage.node.localgov_topic_classified.yml
+++ b/config/install/field.storage.node.localgov_topic_classified.yml
@@ -4,8 +4,8 @@ dependencies:
   module:
     - node
     - taxonomy
-id: node.field_topic_term
-field_name: field_topic_term
+id: node.localgov_topic_classified
+field_name: localgov_topic_classified
 entity_type: node
 type: entity_reference
 settings:
