--- a/config/install/taxonomy.vocabulary.localgov_topic.yml
+++ b/config/install/taxonomy.vocabulary.localgov_topic.yml
@@ -2,6 +2,6 @@ langcode: en
 status: true
 dependencies: {  }
 name: Topic
-vid: topic
+vid: localgov_topic
 description: 'Topic tags group together related content across all services'
 weight: 0
