--- a/config/optional/views.view.topics.yml
+++ b/config/optional/views.view.topics.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - taxonomy.vocabulary.topic
+    - taxonomy.vocabulary.localgov_topic
   module:
     - taxonomy
     - user
@@ -118,7 +118,7 @@ display:
           table: taxonomy_term_field_data
           field: vid
           value:
-            topic: topic
+            localgov_topic: localgov_topic
           entity_type: taxonomy_term
           entity_field: vid
           plugin_id: bundle
@@ -238,7 +238,7 @@ display:
           table: taxonomy_term_field_data
           field: vid
           value:
-            topic: topic
+            localgov_topic: localgov_topic
           entity_type: taxonomy_term
           entity_field: vid
           plugin_id: bundle
