--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,7 @@
-name: Test LocalGov Drupal Topics
+##
+# Managed by https://github.com/localgovdrupal/github_workflow_manager
+---
+name: Test localgovdrupal/localgov_topics drupal-module
 
 on:
   push:
@@ -7,6 +10,10 @@ on:
   pull_request:
     branches:
       - '1.x'
+
+env:
+  LOCALGOV_DRUPAL_PROJECT: localgovdrupal/localgov_topics
+  LOCALGOV_DRUPAL_PROJECT_PATH: web/modules/contrib/localgov_topics
 
 jobs:
 
@@ -17,13 +24,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - localgov-version: "1.x"
-            drupal-version: "~8.9"
-            php-version: "7.4"
-          - localgov-version: "2.x"
-            drupal-version: "~9.1"
-            php-version: "7.4"
+        localgov-version:
+          - '2.x'
+        drupal-version:
+          - '~9.3'
+        php-version:
+          - '7.4'
+          - '8.1'
 
     steps:
 
@@ -32,14 +39,12 @@ jobs:
         run: |
           echo "GIT_BASE=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
           echo "GIT_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-          echo "GIT_REPO=${GITHUB_REPOSITORY}" >> $GITHUB_ENV
 
       - name: Save git branch and git repo names to env if this is a pull request
         if: github.event_name == 'pull_request'
         run: |
           echo "GIT_BASE=${GITHUB_BASE_REF}" >> $GITHUB_ENV
           echo "GIT_BRANCH=${GITHUB_HEAD_REF}" >> $GITHUB_ENV
-          echo "GIT_REPO=${{ github.event.pull_request.head.repo.full_name }}" >> $GITHUB_ENV
 
       - name: Set composer branch reference for version branches
         if: endsWith(github.ref, '.x')
@@ -81,9 +86,9 @@ jobs:
 
       - name: Obtain the test target from the repo that triggered this workflow
         run: |
-          composer --working-dir=html config repositories.1 vcs git@github.com:${GIT_REPO}.git
+          composer --working-dir=html config repositories.1 vcs git@github.com:${LOCALGOV_DRUPAL_PROJECT}.git
           composer global config github-oauth.github.com ${{ github.token }}
-          composer --working-dir=./html require --with-all-dependencies localgovdrupal/${{ github.event.repository.name }}:"${COMPOSER_REF} as ${LATEST_RELEASE}"
+          composer --working-dir=./html require --with-all-dependencies ${LOCALGOV_DRUPAL_PROJECT}:"${COMPOSER_REF} as ${LATEST_RELEASE}"
 
   phpcs:
     name: Coding standards checks
@@ -93,13 +98,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - localgov-version: "1.x"
-            drupal-version: "~8.9"
-            php-version: "7.4"
-          - localgov-version: "2.x"
-            drupal-version: "~9.1"
-            php-version: "7.4"
+        localgov-version:
+          - '2.x'
+        drupal-version:
+          - '~9.3'
+        php-version:
+          - '7.4'
+          - '8.1'
 
     steps:
 
@@ -114,12 +119,12 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
+          php-version: ${{ matrix.php-version }}
 
       - name: Run coding standards checks
         run: |
           cd html
-          ./bin/phpcs -p
+          ./bin/phpcs -p ${LOCALGOV_DRUPAL_PROJECT_PATH}
 
   phpstan:
     name: Deprecated code checks
@@ -129,13 +134,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - localgov-version: "1.x"
-            drupal-version: "~8.9"
-            php-version: "7.4"
-          - localgov-version: "2.x"
-            drupal-version: "~9.1"
-            php-version: "7.4"
+        localgov-version:
+          - '2.x'
+        drupal-version:
+          - '~9.3'
+        php-version:
+          - '7.4'
+          - '8.1'
 
     steps:
 
@@ -150,13 +155,12 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
+          php-version: ${{ matrix.php-version }}
 
       - name: Run deprecated code checks
         run: |
           cd html
-          ./bin/phpstan analyse -c ./phpstan.neon ./web/profiles/contrib/localgov/ ./web/modules/contrib/localgov_*
-
+          ./bin/phpstan analyse -c ./phpstan.neon ${LOCALGOV_DRUPAL_PROJECT_PATH}
   phpunit:
     name: PHPUnit tests
     needs: build
@@ -165,13 +169,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - localgov-version: "1.x"
-            drupal-version: "~8.9"
-            php-version: "7.4"
-          - localgov-version: "2.x"
-            drupal-version: "~9.1"
-            php-version: "7.4"
+        localgov-version:
+          - '2.x'
+        drupal-version:
+          - '~9.3'
+        php-version:
+          - '7.4'
+          - '8.1'
 
     steps:
 
@@ -195,8 +199,6 @@ jobs:
       - name: Run PHPUnit tests
         run: |
           mkdir -p ./html/web/sites/simpletest && chmod 777 ./html/web/sites/simpletest
-          # Older versions of Paratest (the one required by LocalGov 1.x) don't pickup
-          # environmental variables, so it's necessary to change the config file directly.
           sed -i "s#http://localgov.lndo.site#http://drupal#" ./html/phpunit.xml.dist
           docker exec -t drupal bash -c 'chown docker:docker -R /var/www/html'
-          docker exec -u docker -t drupal bash -c "cd /var/www/html && ./bin/paratest --processes=4"
+          docker exec -u docker -t drupal bash -c "cd /var/www/html && ./bin/paratest --processes=4 web/modules/contrib/localgov_topics"
